<resources>
    <string name="app_name">DrinkOrderSystem</string>
    <string name="order">點餐：</string>
    <string name="choice">選擇</string>
    <string name="confirmOrder">確認餐點：</string>
    <string name="meal">飲料： 無 <br/><br/>甜度： 無 <br/><br/>冰塊： 無</string>
    <string name="drink">飲料</string>
    <string name="inputDrinkName">請輸入飲料名稱</string>
    <string name="send">送出</string>
    <string name="normal_ice">正常冰</string>
    <string name="less_ice">少冰</string>
    <string name="low_ice">微冰</string>
    <string name="no_ice">去冰</string>
    <string name="ice">冰塊</string>
    <string name="standard_sugar">全糖</string>
    <string name="half_sugar">半糖</string>
    <string name="less_sugar">少糖</string>
    <string name="no_sugar">無糖</string>
    <string name="sugar_level">甜度</string>
</resources>